--- a/style/main.css
+++ b/style/main.css
@@ -51,6 +51,17 @@ header nav a:hover{
     justify-content: center;
     align-items: flex-start;
 }
+
+.trailer{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-size: cover;
+    padding: 10px;
+    margin: 10px;
+    
+}
+
 .filme-principal .descricao{
     margin-top: 10px;
     margin-bottom: 40px;
@@ -105,6 +116,7 @@ header nav a:hover{
     justify-content: center;
     color:rgba(255,255,255,.50);
 }
+
 
 .subtitle:hover{
     color:rgba(255,255,255);
